<resources>
    <string name="app_name">UVCE Connect</string>
    <string name="open_navigation_drawer">Open Navigation Drawer</string>
    <string name="close_navigation_drawer">Close Navigation Drawer</string>
    <string name="title_activity_about_uvce">about_uvce</string>
    <string name="arch">Architecture</string>
    <string name="cse">Computer Science and Engineering</string>
    <string name="ce">Civil Engineering</string>
    <string name="eee">Electronic and Electrical Engineering</string>
    <string name="ece">Electronics and Communication Engineering</string>
    <string name="ise">Information Science and Engineering</string>
    <string name="me">Mechanical Engineering</string>
    <string name="download">Download</string>
    <string-array name="branch_array">
        <item>@string/arch</item>
        <item>@string/cse</item>
        <item>@string/ce</item>
        <item>@string/ece</item>
        <item>@string/eee</item>
        <item>@string/ise</item>
        <item>@string/me</item>
    </string-array>
    <string-array name="semester_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="year_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string-array name="priority_array">
        <item>Priority</item>
        <item>Non-Priority</item>
    </string-array>
    <string name="disclaimer">
        UVCE Connect has made honest effort to gather document from various departments.
        The validation of such documents may vary along with time.
        We appreciate users to contribute towards the same.
    </string>
    <string name="title_activity_associations">
        ASSOCIATIONS
    </string>
    <string name="title_activity_academics">
    Question Papers and Syllabus
    </string>
    <string name="uvce_jaathre">
         As the name indicates, it\'s a colourful one day event organised by 2nd year students during the month of Oct every year. During this event various collegiate clubs\’ setup their stall at quadrangle of main campus and conduct fun games, thereby helping freshers to know about UVCE.
    </string>
    <string name="fiesta">
        It\'s a one day intra collegiate Cultural fest of UVCE organised by 3rd year students in odd semester. It\'s a Cultural extravaganza which accelerates UVCEians to participate in widespread events. Students from every department of UVCE participate in this fest.
    </string>
    <string name="civista">
        This event is similar to fiesta but this being celebrated by Civil Students at Jnana Bharathi campus. Civista is the annual Cultural fest of Civil department and is organised by 3rd year students. It attracts huge number of participants from the Bangalore University campus.
    </string>
    <string name="esportivo">
        Sports has a high calibre in UVCE. The craze setup for football and cricket is everlasting in the century old college. Esportivo is a week-long event organised by sports geeks to uphold the sportsmanship sprit among various teams across Bengaluru.
    </string>
    <string name="milagro">
        MILAGRO is the biggest cultural festival in UVCE organised by final year students which spans over two days. However, the entire week will be called as Milagro Week and various events are held to entertain the students. With the history of two decades, it provides a platform where every individual in college comes together to create a difference. It upholds the pride of UVCE and culture of Karnataka. It has always been dealt with grandeur and festivity.
    </string>
    <string name="kagada">
        It\'s a National level technical symposium, organised by Team IEEE UVCE. Students across the country take part in this event where they get to showcase their technical knowledge and research by means of Paper and Poster presentation. The best paper and posters are awarded.
    </string>
    <string name="inspiron">
        Inspiron is an inter college technical fest organized by The Training and Placement Office, UVCE. It is an entrepreneurship and management extravaganza which has various events that requires one to showcase technical, entrepreneurship and managerial skills.  It is conducted every year in odd semester.
    </string>
    <string name="impetus">
        IMPETUS is a National Level Technical Extravaganza organized by IEEE UVCE. IMPETUS is a technical fest designed for a change and with a vivid difference. Unlike other fests, every year this fest goes out with a message for the engineers. The fest was themed after Engineering for Society followed by Innovation and Entrepreneurship in 2013. This 2 day long fest has always had a diverse participation from all over the country. Over the years IMPETUS has emerged to be one of Bengaluru\'s top technical fests.
    </string>
    <string name="title_activity_admin__page">Admin Access</string>
    <string name="title_activity_admin__add__content">Add Content</string>
    <string name="title_activity_admin__add__delete">Admin Operations</string>
</resources>