<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fests"

    >

    <include layout="@layout/activity_toolbar"/>
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?android:attr/actionBarSize">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/Grey_layout">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="CULTURAL FESTS"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:background="#FFFF"
                android:textSize="40sp"
                android:textStyle="bold"
                android:id="@+id/cultural_fest"
                android:textColor="@color/colorPrimary"/>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cultural_fest"
                android:id="@+id/card1"
                android:padding="5sp"
                android:elevation="50dp"
                app:cardUseCompatPadding="true"
                app:cardPreventCornerOverlap="true">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/blue_border"
                    android:padding="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="UVCE JAATHRE:"
                        android:id="@+id/uvce_jaathre"
                        android:textStyle="bold"
                        android:textSize="25sp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/uvce_jaathre"
                        android:layout_below="@+id/uvce_jaathre"
                        android:id="@+id/content_uvce_jaathre"
                        android:textSize="20sp"
                        />

                </RelativeLayout>
            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/card1"
                android:id="@+id/card2"
                android:padding="5sp"
                android:elevation="50dp"
                app:cardUseCompatPadding="true"
                app:cardPreventCornerOverlap="true">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/blue_border"
                    android:padding="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="FIESTA:"
                        android:id="@+id/fiesta"
                        android:textSize="25sp"
                        android:textStyle="bold"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fiesta"
                        android:layout_below="@+id/fiesta"
                        android:id="@+id/content_fiesta"
                        android:textSize="20sp"/>

                </RelativeLayout>
            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/card2"
                android:id="@+id/card3"
                android:padding="5sp"
                android:elevation="50dp"
                app:cardUseCompatPadding="true"
                app:cardPreventCornerOverlap="true">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/blue_border"
                    android:padding="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="CIVISTA:"
                        android:id="@+id/civista"
                        android:textSize="25sp"
                        android:textStyle="bold"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/civista"
                        android:layout_below="@+id/civista"
                        android:id="@+id/content_civista"
                        android:textSize="20sp"/>

                </RelativeLayout>
            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/card3"
                android:id="@+id/card4"
                android:padding="5sp"
                android:elevation="50dp"
                app:cardUseCompatPadding="true"
                app:cardPreventCornerOverlap="true">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/blue_border"
                    android:padding="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="ESPORTIVO:"
                        android:id="@+id/esportivo"
                        android:textSize="25sp"
                        android:textStyle="bold"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/esportivo"
                        android:layout_below="@+id/esportivo"
                        android:id="@+id/content_esportivo"
                        android:textSize="20sp"/>

                </RelativeLayout>
            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/card4"
                android:id="@+id/card5"
                android:padding="5sp"
                android:elevation="50dp"
                app:cardUseCompatPadding="true"
                app:cardPreventCornerOverlap="true">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/blue_border"
                    android:padding="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="MILAGRO:"
                        android:textSize="25sp"
                        android:id="@+id/milagro"
                        android:textStyle="bold"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/milagro"
                        android:layout_below="@+id/milagro"
                        android:id="@+id/content_milagro"
                        android:textSize="20sp"/>

                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="TECHNICAL FESTS"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="40sp"
                android:textStyle="bold"
                android:background="#FFFF"
                android:id="@+id/technical_fest"
                android:layout_below="@+id/card5"
                android:textColor="@color/colorPrimary"/>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/technical_fest"
                android:id="@+id/card6"
                android:padding="5sp"
                android:elevation="50dp"
                app:cardUseCompatPadding="true"
                app:cardPreventCornerOverlap="true">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/blue_border"
                    android:padding="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="KAGADA:"
                        android:id="@+id/kagada"
                        android:textSize="25sp"
                        android:textStyle="bold"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/kagada"
                        android:layout_below="@+id/kagada"
                        android:id="@+id/content_kagada"
                        android:textSize="20sp"/>

                </RelativeLayout>
            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/card6"
                android:id="@+id/card7"
                android:padding="5sp"
                android:elevation="50dp"
                app:cardUseCompatPadding="true"
                app:cardPreventCornerOverlap="true">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/blue_border"
                    android:padding="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="INSPIRON:"
                        android:textSize="25sp"
                        android:id="@+id/inspiron"
                        android:textStyle="bold"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/inspiron"
                        android:layout_below="@+id/inspiron"
                        android:textSize="20sp"
                        android:id="@+id/content_inspiron"/>

                </RelativeLayout>
            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/card7"
                android:id="@+id/card8"
                android:padding="5sp"
                android:elevation="50dp"
                app:cardUseCompatPadding="true"
                app:cardPreventCornerOverlap="true">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/blue_border"
                    android:padding="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="IMPETUS:"
                        android:textSize="25sp"
                        android:id="@+id/impetus"
                        android:textStyle="bold"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/impetus"
                        android:layout_below="@+id/impetus"
                        android:id="@+id/content_impetus"
                        android:textSize="20sp"/>

                </RelativeLayout>
            </android.support.v7.widget.CardView>

        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.constraint.ConstraintLayout>